# Wollf3d

./: .gitignore  CMakeLists.txt  README.md  id_ca.cpp  id_in.h  id_pm.cpp  version.h  wl_automap.cpp  wl_console.cpp  wl_debug.cpp  wl_def.h  wl_draw.cpp  wl_main.cpp  wl_menu.cpp  wl_play.cpp
langs/: japan.h
